# Modules_example_cmake

./: A.cpp  A.pcm  B.cpp  B.pcm  C.cpp  CMakeLists.txt  D.cpp  D.pcm  Makefile  README.md  helloworld.cpp  imports.cpp  main  main.cpp  mod.pcm  no_imports.cpp  ph.cpp  ph.pcm
modules/: helloworld.cpp  speech.cpp
xbuild/: CMakeCache.txt  cmake_install.cmake
xbuild/CMakeScripts/: ReRunCMake.make
xbuild/Debug/: main
xbuild/main.build/Debug/ZERO_CHECK.build/: Script-4CE3655BE9907AE2760F5D71.sh
xbuild/main.build/Debug/helloworld.pcm.build/: Script-9596959FA3FBE796723FEE9F.sh
xbuild/main.build/Debug/main.build/Objects-normal/arm64/: helloworld.d  main.LinkFileList  main.d  main.dia  speech.d
xbuild/main.build/Debug/speech.pcm.build/: Script-0EE2EFEECF1289F56865B681.sh
xbuild/main.xcodeproj/: project.pbxproj
xbuild/main.xcodeproj/project.xcworkspace/xcuserdata/philipwenkel.xcuserdatad/: UserInterfaceState.xcuserstate
xbuild/main.xcodeproj/xcuserdata/philipwenkel.xcuserdatad/xcschemes/: xcschememanagement.plist
xbuild/modules/: helloworld.pcm  speech.pcm
